<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView 
    	android:id="@+id/cost_title"
    	android:text="@string/cost_title"
    	android:textColor="@color/red"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:textSize="32sp"
    	android:paddingRight="30dp"
    	android:paddingLeft="10dp"
    	android:paddingTop="15dp"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentTop="true" ></TextView>
    	<EditText 
    		android:inputType="number" 
    		android:id="@+id/dollar_editText" 
    		android:layout_height="wrap_content" 
    		android:layout_width="100dp" 
    		android:hint="Dollars" 
    		android:gravity="center"
        	android:maxLines="1"
    		android:maxLength="5"
    		android:textSize="18sp"
    		android:layout_toRightOf="@id/cost_title"
    		android:layout_alignBottom="@id/cost_title" ></EditText>
    	<TextView 
    		android:id="@+id/points"
    		android:text="."
    		android:textSize="24sp"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_toRightOf="@id/dollar_editText"
    		android:layout_alignBottom="@id/cost_title"/>
        <EditText 
        	android:inputType="number" 
        	android:id="@+id/cent_editText" 
        	android:hint="Cents" 
        	android:layout_height="wrap_content" 
        	android:layout_width="70dp" 
        	android:gravity="center" 
        	android:textSize="18sp"
        	android:layout_toRightOf="@id/points"
        	android:maxLines="1"
        	android:maxLength="2"
       		android:layout_alignBottom="@id/cost_title" ></EditText>
    <TextView 
    	android:id="@+id/cost_indication"
    	android:text="@string/cost_indication"
    	android:layout_below="@id/cost_title"
    	android:layout_alignParentRight="true"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingRight="20dp" />	
    <TextView 
    	android:id="@+id/profit_title"
    	android:text="@string/profit_title"
    	android:textColor="@color/red"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:layout_below="@id/cost_indication"
    	android:layout_alignLeft="@id/cost_title"
    	android:textSize="32sp"
    	android:paddingRight="30dp"
    	android:paddingTop="65dp"
    	android:paddingLeft="10dp" ></TextView>
    <EditText 
    	android:inputType="number" 
    	android:id="@+id/profit_editText" 
    	android:layout_height="wrap_content" 
    	android:layout_width="100dp" 
    	android:hint="%" 
    	android:gravity="center"
        android:maxLines="1"
    	android:layout_alignLeft="@id/dollar_editText" 
    	android:maxLength="4"
    	android:textSize="18sp"
    	android:layout_alignBottom="@id/profit_title" ></EditText>
    <TextView 
    	android:id="@+id/profit_indication"
    	android:text="@string/profit_indication"
    	android:layout_below="@id/profit_title"
    	android:layout_alignLeft="@id/cost_indication"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content" />
    <TableLayout 
    	android:layout_height="wrap_content" 
    	android:id="@+id/percentage_table" 
    	android:layout_width="wrap_content" 
    	android:layout_toRightOf="@+id/profit_editText"
    	android:layout_above="@id/profit_indication" >
        <TableRow android:id="@+id/percentage_Row1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        	<Button 
				android:text="25%"
				android:tag="25"
				android:id="@+id/percentage_button_1_1" >
			</Button>
			<Button 
				android:text="50%"
				android:tag="50"
				android:id="@+id/percentage_button_1_2" >
			</Button>
		</TableRow>
        <TableRow android:id="@+id/percentage_Row2" android:layout_width="wrap_content" android:layout_height="wrap_content" >            
        	<Button 
				android:text="10%"
				android:tag="10"
				android:id="@+id/percentage_button_2_1" >
			</Button>
			<Button 
				android:text="75%"
				android:tag="75"
				android:id="@+id/percentage_button_2_2" >
			</Button>
        </TableRow>
    </TableLayout>	
</RelativeLayout>